# libkqueue

./: Android.mk  Makefile.am  configure.ac
android/: config.h
src/common/: kevent.c  knote.c  kqueue.c
src/linux/: platform.c  platform.h  read.c  timer.c  write.c
